{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 182,
  "lineage": "d7dbb198-794c-ef56-32ea-9b0ebcb6e372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00eecf9248aefaff0",
            "public_dns": "ec2-35-160-241-156.us-west-2.compute.amazonaws.com",
            "public_ip": "35.160.241.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ffade19910cbfc0",
            "arn": "arn:aws:ec2:us-west-2:123871167802:instance/i-08928a23cb32a7590",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08928a23cb32a7590",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GamingServerKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e55813c27a56ee3",
            "private_dns": "ip-10-0-1-137.us-west-2.compute.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-34-217-130-104.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.130.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ac4bed71d35a065",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034b3108f275b18a2",
            "tags": {
              "Name": "example-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b38b2a23bc12e285"
            ]
          },
          "dependencies": [
            "aws_key_pair.GamingServerKeyPair",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08bde4c1b7f9b6ba5",
            "owner_id": "123871167802",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eecf9248aefaff0",
            "id": "nat-0f508d859c50daa6a",
            "network_interface_id": "eni-0e18172c76a680f27",
            "private_ip": "10.0.1.75",
            "public_ip": "35.160.241.156",
            "subnet_id": "subnet-034b3108f275b18a2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-080bf0088a31a1dd3",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0f508d859c50daa6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068886568c36f5d10",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bde4c1b7f9b6ba5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a0adc74ecd7ef4",
            "route_table_id": "rtb-080bf0088a31a1dd3",
            "subnet_id": "subnet-09da5fa49f8481c93"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5e00f6640e5242d",
            "route_table_id": "rtb-080bf0088a31a1dd3",
            "subnet_id": "subnet-0d5c53efc52ab4dc8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05896625cf128e1b1",
            "route_table_id": "rtb-080bf0088a31a1dd3",
            "subnet_id": "subnet-0c16f9850780172fe"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-3",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d8f9e3d052aeda",
            "route_table_id": "rtb-068886568c36f5d10",
            "subnet_id": "subnet-034b3108f275b18a2"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056b27826666c5497",
            "route_table_id": "rtb-068886568c36f5d10",
            "subnet_id": "subnet-05226fb8e41409517"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1a5856992baecd0",
            "route_table_id": "rtb-068886568c36f5d10",
            "subnet_id": "subnet-04129a53c18dd7505"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:security-group/sg-0b38b2a23bc12e285",
            "description": "This security group allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b38b2a23bc12e285",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "123871167802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-09da5fa49f8481c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09da5fa49f8481c93",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0d5c53efc52ab4dc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d5c53efc52ab4dc8",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0c16f9850780172fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c16f9850780172fe",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-034b3108f275b18a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-034b3108f275b18a2",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-05226fb8e41409517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05226fb8e41409517",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-04129a53c18dd7505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04129a53c18dd7505",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-02aa246a5c34eff1c"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GamingServerVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:vpc/vpc-02aa246a5c34eff1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001f012531bd22e57",
            "default_route_table_id": "rtb-0eb310879de7a3e8d",
            "default_security_group_id": "sg-0b8466225bd744612",
            "dhcp_options_id": "dopt-70442608",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02aa246a5c34eff1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb310879de7a3e8d",
            "owner_id": "123871167802",
            "tags": {
              "Name": "GamingServerVPC"
            }
          }
        }
      ]
    }
  ]
}